Fix some issues and unified functions